# EcoMind-AI

./:  README.md  .dockerignore  .env.production.example  .gitignore  ACCEPTANCE_SUMMARY.md  AGENTS.md  CLAUDE.md  CODEMAP.md  ISSUE_DATA_NOT_SHOWING.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyrightconfig.json  verify.py
backend/: .dockerignore  .env.example  BACKEND_SUMMARY.md  Dockerfile  Dockerfile.cloudbase  Dockerfile.prod  ENCRYPTION_MIGRATION.md  TCP_GATEWAY_README.md  cloudbaserc.json  create_admin.py  ecomind.db  init_test_data.py  pyproject.toml  requirements-cloudbase.txt  requirements-core.txt  requirements.txt  reset_admin_password.py  test_api_data.py  test_data_simple.py  test_parser_simple.py
backend/app/: main.py
backend/scripts/: check_user_orgs.py  demo_multitenancy.sh  demo_realtime_monitoring.py  demo_via_api.py  fix_user_organizations.py  init_superadmin.py  inject_report_test_data.py  migrate_encryption.py  migrate_to_multitenancy.py  mock_device.py  quick_demo.py  reassign_devices.py  send_test_data.py  simple_demo.py  tcp_proxy_server.py  test_ai_stream.py  test_alarm_sms_strategy.py  test_device_permissions.py  test_multitenancy.py  test_prophet_prediction.py  test_register_frontend.py  test_report.py  test_spark.py  test_tdengine_flow.py  upgrade_tdengine_schema.py  upgrade_user_role.py  verify_multitenancy_fix.py
backend/tests/: conftest.py  test_ai_anomaly_detection.py  test_auth.py  test_e2e_tdengine.py  test_encryption.py  test_flag_validator.py  test_hj212.py  test_parser.py  test_pollutant_library.py  (+2 more)
(+1233 files in other folders)
